--- a/css/style.css
+++ b/css/style.css
@@ -380,3 +380,46 @@ footer p:nth-child(2) {
 	font-size: 14px;
 }
 
+@media (max-width: 992px)
+{
+
+    .nav
+    {
+        padding-left: 30px;
+        padding-right:30px;
+    }
+
+
+    .nav
+    {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .portfolio
+    {
+        padding-left: 20px;
+ 
+    }
+
+    .portfolio
+    {
+        display: block;
+        margin-bottom: 10px;
+    }
+
+    .container
+    {
+        flex-direction: column;
+    }
+
+    .btn:hover
+    {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+
+
+
+}
